--- a/config/packages/knp_paginator.yaml
+++ b/config/packages/knp_paginator.yaml
@@ -1,3 +1,3 @@
 knp_paginator:
-    template:
-        pagination: '@KnpPaginator/Pagination/bootstrap_v5_pagination.html.twig'
+  template:
+    pagination: "@KnpPaginator/Pagination/bootstrap_v5_pagination.html.twig"
