--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "build": "encore production --progress"
     },
     "dependencies": {
+        "aos": "^3.0.0-beta.6",
         "bootstrap": "^5.3.0-alpha1",
         "jquery": "^3.6.3"
     }
